➕ Installed mdx-embed to support figma embed in MDX files

--- a/storefront/package.json
+++ b/storefront/package.json
@@ -13,7 +13,7 @@
     "@altinn/figma-design-tokens": "^5.0.0",
     "@digdir/design-system-react": "*",
     "@mdx-js/loader": "^2.0.0-rc.2",
-    "@mdx-js/react": "^2.0.0-rc.2",
+    "@mdx-js/react": "^1.6.22",
     "@navikt/aksel-icons": "^2.8.4",
     "@next/font": "13.0.7",
     "@reach/disclosure": "^0.18.0",
@@ -26,6 +26,7 @@
     "classnames": "^2.3.2",
     "directory-tree": "^3.5.1",
     "gray-matter": "^4.0.3",
+    "mdx-embed": "^1.1.2",
     "moment": "^2.29.4",
     "next": "13.0.7",
     "normalize.css": "^8.0.1",
